--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to MNOVALDR Server</h1>
+    <h1>Welcome to HOLDER XRP ROKETTTTT JAYAA JAYAA JAYAA</h1>
     <h2>Muhammad Noval Dwi Ramadhani (23201188)</h2>
     <footer>&copy; 2025 MNOVALDR Server</footer>
 </body>
